--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script>
     const spec = {
   "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
-  "title": "Populated Cities",
+  "title": "Populated Cities VS Earth Quakes",
   "width": 800,
   "height": 400,
   "projection": {"type": "equalEarth"},
